Create CSS Display Table

--- a/build-your-own-cheatsheet-codecademy/index.html
+++ b/build-your-own-cheatsheet-codecademy/index.html
@@ -957,7 +957,7 @@ li {
             </tbody>
         </table>
     </div>
-<br></br>
+<br>
 <!--Start of CSS: The Box Model Table-->
     <div class="table">
         <table id="css_box">
@@ -1047,7 +1047,7 @@ small-block {
 </xmp>
                     </td>
                 </tr>
-                <tr>git push origin master --force
+                <tr>
                     <td colspan="2">CSS box-sizing: border-box</td>
                     <td>The value <em>border-box</em> of the <em>box-sizing</em> property for an element corresponds directly to the element’s total rendered size, including padding and border with the <em>height</em> and <em>width</em> properties.
                     <br>
@@ -1057,6 +1057,84 @@ small-block {
 #box-example {
     box-sizing: border-box;
 }
+</xmp>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+<br>
+<!--Start of CSS: Display and Positioning Table-->
+    <div>
+        <table id="css_display">
+            <thead><a href="https://www.codecademy.com/learn/paths/fscj-22-web-development-foundations/tracks/fscj-22-fundamentals-of-css/modules/wdcp-22-learn-css-display-and-positioning-fcf96efc-f6fb-4002-bdb4-f4f6b4b3d52c/cheatsheet" target="_blank">CSS: Display and Positioning</a>
+                <tr>
+                    <th id="tag">Tag</th>
+                    <th id="name">Name</th>
+                    <th id="description">Description</th>
+                    <th id="example">Example</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td colspan="2">name</td>
+                    <td>description</td>
+                    <td class="example">
+<xmp>
+example
+</xmp>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">name</td>
+                    <td>description</td>
+                    <td class="example">
+<xmp>
+example
+</xmp>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">name</td>
+                    <td>description</td>
+                    <td class="example">
+<xmp>
+example
+</xmp>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">name</td>
+                    <td>description</td>
+                    <td class="example">
+<xmp>
+example
+</xmp>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">name</td>
+                    <td>description</td>
+                    <td class="example">
+<xmp>
+example
+</xmp>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">name</td>
+                    <td>description</td>
+                    <td class="example">
+<xmp>
+example
+</xmp>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">name</td>
+                    <td>description</td>
+                    <td class="example">
+<xmp>
+example
 </xmp>
                     </td>
                 </tr>
