Create CSS Typography table

--- a/build-your-own-cheatsheet-codecademy/index.html
+++ b/build-your-own-cheatsheet-codecademy/index.html
@@ -11,7 +11,7 @@
         <p>The purpose of this site is to be a repository of all the cheatsheets that are provided by Codecademy. Instead of having to look through several pages or PDFs, my hope is that this will be a ever-udpated document that I, and possible others, can use.</p>
     <h1>HTML</h1>
         <p>The follow is a list of the <strong>HTML</strong> elements listed on the Codecademy cheatsheets.</p>
-<!--Start of Command Line for Building Websites-->
+<!--Start of Command Line for Building Websites Table-->
     <div class="table">
         <table id="command_line">
             <thead><a href="https://www.codecademy.com/learn/paths/fscj-22-web-development-foundations/tracks/fscj-22-deploying-websites/modules/wdcp-22-command-line-for-building-websites-882bca36-730b-44af-9f3f-fff9c60073e7/cheatsheet" target="_blank">Command Line for Building Websites</a>
@@ -735,7 +735,7 @@ Oh joy! A line break.
     </div>
 <br>
     <h1>CSS</h1>
-    <p>The follow is a list of the <strong>CSS</strong> elements listed on the Codecademy cheatsheets.</p>
+    <p>The follow is a list of the <strong>CSS</strong> elements listed on the Codecademy cheat sheets.</p>
 <!--Start of CSS Selectors and Visual Rules Table-->
     <div class="table">
 
@@ -1148,8 +1148,8 @@ small-block {
         </table>
     </div>
 <br>
-<!--Start of CSS: Colors-->
-    <div>
+<!--Start of CSS: Display Table-->
+    <div class="table">
         <table id="css_display">
             <thead><a href="https://www.codecademy.com/learn/paths/fscj-22-web-development-foundations/tracks/fscj-22-fundamentals-of-css/modules/wdcp-22-learn-css-display-and-positioning-fcf96efc-f6fb-4002-bdb4-f4f6b4b3d52c/cheatsheet" target="_blank">CSS: Display and Positioning</a>
                 <tr>
@@ -1284,6 +1284,7 @@ small-block {
         </table>
     </div>
     <br>
+<!--Start of CSS: Colors Table-->
     <div class="table">
         <table id="css_colors">
             <thead><a href="https://www.codecademy.com/learn/paths/fscj-22-web-development-foundations/tracks/fscj-22-improved-styling-with-css/modules/wdcp-22-learn-css-colors-fb7afde0-5376-43ed-86ba-c87c41749e61/cheatsheet" target="_blank">CSS: Colors</a>
@@ -1349,6 +1350,74 @@ h1 {
                     </td>
                 </tr>
             </tbody>
+    </div>
+    <br>
+<!--Start of CSS: Typography Table-->
+    <div class="table">
+        <table id="css_typography">
+            <thead><a href="https://www.codecademy.com/learn/paths/fscj-22-web-development-foundations/tracks/fscj-22-improved-styling-with-css/modules/wdcp-22-learn-css-typography-4c5912f3-6eb7-4ec7-a94a-de654e0bd6a3/cheatsheet" target="_blank">CSS: Typography</a>
+                <tr>
+                    <th id="name">Name</th>
+                    <th id="description">Description</th>
+                    <th id="example">Example</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>name</td>
+                    <td>description</td>
+                    <td class="example">
+<xmp>
+example
+</xmp>
+                    </td>
+                </tr>
+                <tr>
+                    <td>name</td>
+                    <td>description</td>
+                    <td class="example">
+<xmp>
+example
+</xmp>
+                    </td>
+                </tr>
+                <tr>
+                    <td>name</td>
+                    <td>description</td>
+                    <td class="example">
+<xmp>
+example
+</xmp>
+                    </td>
+                </tr>
+                <tr>
+                    <td>name</td>
+                    <td>description</td>
+                    <td class="example">
+<xmp>
+example
+</xmp>
+                    </td>
+                </tr>
+                <tr>
+                    <td>name</td>
+                    <td>description</td>
+                    <td class="example">
+<xmp>
+example
+</xmp>
+                    </td>
+                </tr>
+                <tr>
+                    <td>name</td>
+                    <td>description</td>
+                    <td class="example">
+<xmp>
+example
+</xmp>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </body>
 </html>
