--- a/build-your-own-cheatsheet-codecademy/index.html
+++ b/build-your-own-cheatsheet-codecademy/index.html
@@ -1363,56 +1363,79 @@ h1 {
             </thead>
             <tbody>
                 <tr>
-                    <td>name</td>
-                    <td>description</td>
+                    <td>CSS font-weight Property</td>
+                    <td>The CSS <em>font-weight</em> property declares how thick or thin should be the characters of a text. Numerical values can be used with this property to set the thickness of the text. The numeric scale range of this property is from 100 to 900 and accepts only multiples of 100. The default value is <em>normal</em> while the default numerical value is <em>400</em>. Any value less than <em>400</em> will have text appear lighter than the default while any numerical value greater than the <em>400</em> will appear bolder.
+                    <br>
+                    In the given example, all the &lt;p&gt; elements will appear in a bolder font.</td>
                     <td class="example">
 <xmp>
-example
+/* Sets the text as bolder. */
+p {
+    font-weight: 700;
+}
 </xmp>
                     </td>
                 </tr>
                 <tr>
-                    <td>name</td>
-                    <td>description</td>
+                    <td>CSS font-style property</td>
+                    <td>The CSS <em>font-style</em> property determines the font style in which text will appear.
+                    <br>
+                    It accepts <em>italic</em> as a value to set the font style to italic.</td>
                     <td class="example">
 <xmp>
-example
+.text {
+    font-style: italic;
+}
 </xmp>
                     </td>
                 </tr>
                 <tr>
-                    <td>name</td>
-                    <td>description</td>
+                    <td>CSS @font-face rule</td>
+                    <td>The CSS @font-face rule allows external fonts or font files to be imported directly into stylesheets.The location of the font file must be specified in the CSS rule so that the files can be loaded from that location. This rule also allows locally hosted fonts to be added using a relative file path instead of a web URL.</td>
                     <td class="example">
 <xmp>
-example
+@font-face {
+    font-family: 'Glegoo';
+    src: url('../fonts/Glegoo-Regular.ttf') format('truetype');
+}
 </xmp>
                     </td>
                 </tr>
                 <tr>
-                    <td>name</td>
-                    <td>description</td>
+                    <td>CSS Fallback Fonts</td>
+                    <td>The CSS <em>font-family</em> property can have multiple fonts declared in order of preference. In this case the fonts following the initial font are known as the fallback fonts.
+                    <br>
+                    If the initial value of the property <em>font-family</em> fails to load to the webpage, the fallback fonts will be used.</td>
                     <td class="example">
 <xmp>
-example
+/* Here `Arial` is the fallback font for <p> tags */
+p {
+    font-family: "Helvetica", "Arial";
+}
+        
 </xmp>
                     </td>
                 </tr>
                 <tr>
-                    <td>name</td>
-                    <td>description</td>
+                    <td>The CSS line-height property</td>
+                    <td>The CSS <em>line-height</em> property declares the vertical spacing between lines of text. It accepts both unitless numbers as a ratio (eg. <em>2</em>) and numbers specified by unit as values (eg. <em>12px</em>) but it does not accept negative numbers. A unitless number is an absolute value that will compute the line height as a ratio to the font size and a unit number can be any valid CSS unit (eg. pixels, percents, ems, rems, etc.). To set the <em>line-height</em> of the <em>&lt;p&gt;</em> elements to <em>10px</em>, the given CSS declaration can be used.</td>
                     <td class="example">
 <xmp>
-example
+p {
+    line-height: 10px;
+}
 </xmp>
                     </td>
                 </tr>
                 <tr>
-                    <td>name</td>
-                    <td>description</td>
+                    <td>CSS Linking fonts</td>
+                    <td>Linking fonts allow user to use web fonts in the document. They can be imported in an HTML document by using the <em>&lt;link&gt;</em> tag. Once the web font URL is placed within the <em>href</em> attribute, the imported font can then be used in CSS declaration.</td>
                     <td class="example">
 <xmp>
-example
+<head>
+    <link href="https://fonts.googleapis.com/css?family=Droid%20Serif" rel="stylesheet">
+</head>
+      
 </xmp>
                     </td>
                 </tr>
