--- a/build-your-own-cheatsheet-codecademy/index.html
+++ b/build-your-own-cheatsheet-codecademy/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Introduction</h1>
-        <p>The purpose of this site is to be a repository of all the cheatsheets that are provided by Codecademy. Instead of having to look through several pages or PDFs, my hope is that this will be a ever-udpated document that I, and possible others, can use.</p>
+        <p>The purpose of this site is to be a repository of all the cheat sheets that are provided by Codecademy. Instead of having to look through several pages or PDFs, my hope is that this will be a continually updated document that I, and possibly others, can use.</p>
     <h1>HTML</h1>
         <p>The follow is a list of the <strong>HTML</strong> elements listed on the Codecademy cheatsheets.</p>
 <!--Start of Command Line for Building Websites Table-->
