Create buttons for nav menu

--- a/build-your-own-cheatsheet-codecademy/index.html
+++ b/build-your-own-cheatsheet-codecademy/index.html
@@ -9,6 +9,19 @@
 <body>
     <h1>Introduction</h1>
         <p>The purpose of this site is to be a repository of all the cheat sheets that are provided by Codecademy. Instead of having to look through several pages or PDFs, my hope is that this will be a continually updated document that I, and possibly others, can use.</p>
+    <div id="nav_menu">
+        <button>HTML: Command Line for Building Websites</button>
+        <button>HTML: Elements</button>
+        <button>HTML: Structure</button>
+        <button>HTML: Tables</button>
+        <button>HTML: Semantics</button>
+        <br>
+        <button>CSS: Selectors and Visual Rules</button>
+        <button>CSS: The Box Model</button>
+        <button>CSS: Display and Positioning</button>
+        <button>CSS: Colors</button>
+        <button>CSS: Typography</button>
+    </div>
     <h1>HTML</h1>
         <p>The follow is a list of the <strong>HTML</strong> elements listed on the Codecademy cheatsheets.</p>
 <!--Start of Command Line for Building Websites Table-->
@@ -1041,7 +1054,7 @@ li {
             </tbody>
         </table>
     </div>
-<br>
+    <br>
 <!--Start of CSS: The Box Model Table-->
     <div class="table">
         <table id="css_box">
@@ -1147,7 +1160,7 @@ small-block {
             </tbody>
         </table>
     </div>
-<br>
+    <br>
 <!--Start of CSS: Display Table-->
     <div class="table">
         <table id="css_display">
