Add buttons and links to divs in page for easier navigation

--- a/build-your-own-cheatsheet-codecademy/index.html
+++ b/build-your-own-cheatsheet-codecademy/index.html
@@ -7,20 +7,20 @@
     <title>Codecademy Cheatsheets All-in-One</title>
 </head>
 <body>
-    <h1>Introduction</h1>
+    <h1 id="intro">Introduction</h1>
         <p>The purpose of this site is to be a repository of all the cheat sheets that are provided by Codecademy. Instead of having to look through several pages or PDFs, my hope is that this will be a continually updated document that I, and possibly others, can use.</p>
     <div id="nav_menu">
-        <button>HTML: Command Line for Building Websites</button>
-        <button>HTML: Elements</button>
-        <button>HTML: Structure</button>
-        <button>HTML: Tables</button>
-        <button>HTML: Semantics</button>
+        <button><a href="#command_line">Command Line for Building Websites</a></button>
         <br>
-        <button>CSS: Selectors and Visual Rules</button>
-        <button>CSS: The Box Model</button>
-        <button>CSS: Display and Positioning</button>
-        <button>CSS: Colors</button>
-        <button>CSS: Typography</button>
+        <button><a href="#html_elements">HTML: Elements</a></button>
+        <button><a href="#html_structure">HTML: Structure</a></button>
+        <button><a href="#html_tables">HTML: Tables</a></button>
+        <button><a href="#html_semantics">HTML: Semantics</a></button>
+        <button><a href="#css_selectors_visuals">CSS: Selectors and Visual Rules</a></button>
+        <button><a href="#css_box">CSS: The Box Model</a></button>
+        <button><a href="#css_display">CSS: Display and Positioning</a></button>
+        <button><a href="#css_colors">CSS: Colors</a></button>
+        <button><a href="#css_typography">CSS: Typography</a></button>
     </div>
     <h1>HTML</h1>
         <p>The follow is a list of the <strong>HTML</strong> elements listed on the Codecademy cheatsheets.</p>
@@ -653,7 +653,7 @@ Oh joy! A line break.
 <!--Start of HTML Semantics Table-->
     <div class="table">
     <table id="html_semantics">
-        <thead><a href="https://www.codecademy.com/learn/paths/fscj-22-web-development-foundations/tracks/fscj-22-fundamentals-of-html/modules/wdcp-22-semantic-html-44fa9550-9f1e-49de-b4d6-295acba84038/cheatsheet" target="_blank">Semantic HTML</a>
+        <thead><a href="https://www.codecademy.com/learn/paths/fscj-22-web-development-foundations/tracks/fscj-22-fundamentals-of-html/modules/wdcp-22-semantic-html-44fa9550-9f1e-49de-b4d6-295acba84038/cheatsheet" target="_blank">HTML Semantics</a>
             <tr>
                 <th id="tag">Tag</th>
                 <th id="name">Name</th>
