Remove buttons from nav menu

--- a/build-your-own-cheatsheet-codecademy/index.html
+++ b/build-your-own-cheatsheet-codecademy/index.html
@@ -10,18 +10,18 @@
     <h1 id="intro">Introduction</h1>
         <p>The purpose of this site is to be a repository of all the cheat sheets that are provided by Codecademy. Instead of having to look through several pages or PDFs, my hope is that this will be a continually updated document that I, and possibly others, can use.</p>
     <div id="nav_menu">
-        <button><a href="#command_line">Command Line for Building Websites</a></button>
+        <a href="#command_line">Command Line for Building Websites</a>
         <br>
-        <button><a href="#html_elements">HTML: Elements</a></button>
-        <button><a href="#html_structure">HTML: Structure</a></button>
-        <button><a href="#html_tables">HTML: Tables</a></button>
-        <button><a href="#html_semantics">HTML: Semantics</a></button>
-        <button><a href="#css_selectors_visuals">CSS: Selectors and Visual Rules</a></button>
-        <button><a href="#css_box">CSS: The Box Model</a></button>
-        <button><a href="#css_display">CSS: Display and Positioning</a></button>
-        <button><a href="#css_colors">CSS: Colors</a></button>
-        <button><a href="#css_typography">CSS: Typography</a></button>
-        <button><a href="#css_links_buttons"></a></button>
+        <a href="#html_elements">HTML: Elements</a>
+        <a href="#html_structure">HTML: Structure</a>
+        <a href="#html_tables">HTML: Tables</a>
+        <a href="#html_semantics">HTML: Semantics</a>
+        <a href="#css_selectors_visuals">CSS: Selectors and Visual Rules</a>
+        <a href="#css_box">CSS: The Box Model</a>
+        <a href="#css_display">CSS: Display and Positioning</a>
+        <a href="#css_colors">CSS: Colors</a>
+        <a href="#css_typography">CSS: Typography</a>
+        <a href="#css_links_buttons"></a>
     </div>
     <h1>HTML</h1>
         <p>The follow is a list of the <strong>HTML</strong> elements listed on the Codecademy cheatsheets.</p>
@@ -1456,6 +1456,29 @@ p {
             </tbody>
         </table>
     </div>
+    <br>
+<!--Start of CSS: Links and Buttons Table-->  
+    <div>
+        <table id="css_links+buttons">
+            <thead><a href="INSERT URL" target="_blank">Title</a>
+                <tr>
+                    <th id="tag">Tag</th>
+                    <th id="name">Name</th>
+                    <th id="description">Description</th>
+                    <th id="example">Example</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>&lt;tag&gt;</td>
+                    <td>name</td>
+                    <td>description</td>
+                    <td class="example">
+<xmp>
+example
+</xmp>
+                    </td>
+                </tr>
+    </div>
 </body>
 </html>
 
@@ -1469,7 +1492,7 @@ p {
 -->
 
 <!--Below is a template table to copy/paste
-        <table id="html_elements">
+        <table id="id_id">
             <thead><a href="INSERT URL" target="_blank">Title</a>
                 <tr>
                     <th id="tag">Tag</th>
