Add title to links and buttons anchor

--- a/build-your-own-cheatsheet-codecademy/index.html
+++ b/build-your-own-cheatsheet-codecademy/index.html
@@ -16,12 +16,13 @@
         <a href="#html_structure">HTML: Structure</a>
         <a href="#html_tables">HTML: Tables</a>
         <a href="#html_semantics">HTML: Semantics</a>
+        <br>
         <a href="#css_selectors_visuals">CSS: Selectors and Visual Rules</a>
         <a href="#css_box">CSS: The Box Model</a>
         <a href="#css_display">CSS: Display and Positioning</a>
         <a href="#css_colors">CSS: Colors</a>
         <a href="#css_typography">CSS: Typography</a>
-        <a href="#css_links_buttons"></a>
+        <a href="#css_links_buttons">CSS Links and Buttons</a>
     </div>
     <h1>HTML</h1>
         <p>The follow is a list of the <strong>HTML</strong> elements listed on the Codecademy cheatsheets.</p>
