Create flexbox table

--- a/build-your-own-cheatsheet-codecademy/index.html
+++ b/build-your-own-cheatsheet-codecademy/index.html
@@ -1459,7 +1459,7 @@ p {
     </div>
     <br>
 <!--Start of CSS: Links and Buttons Table-->  
-    <div>
+    <div class="table">
         <table id="css_links_buttons">
             <thead><a href="https://www.codecademy.com/learn/paths/fscj-22-web-development-foundations/tracks/fscj-22-improved-styling-with-css/modules/wdcp-22-learn-links-and-buttons-7c515143-5864-4beb-9b48-5c1d1528124e/cheatsheet" target="_blank">CSS Links and Buttons</a>
                 <tr>
@@ -1598,6 +1598,30 @@ button:active {
 </xmp>
                     </td>
                 </tr>
+    </div>
+    <br>
+<!--Start of CSS: Layouts with Flexbox-->  
+    <div class="table">
+        <table id="css_flexbox">
+            <thead><a href="https://www.codecademy.com/learn/paths/fscj-22-web-development-foundations/tracks/fscj-22-making-a-website-responsive/modules/wdcp-22-layout-with-flexbox-8a62abed-21fe-442a-8d4d-2b84f3d4ee3a/cheatsheet" target="_blank">CSS: Layout with Flexbox</a>
+                <tr>
+                    <th id="tag">Tag</th>
+                    <th id="name">Name</th>
+                    <th id="description">Description</th>
+                    <th id="example">Example</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>&lt;tag&gt;</td>
+                    <td>name</td>
+                    <td>description</td>
+                    <td class="example">
+<xmp>
+example
+</xmp>
+                    </td>
+                </tr>
+            </tbody>
     </div>
 </body>
 </html>
