Add link to navmenu

--- a/build-your-own-cheatsheet-codecademy/index.html
+++ b/build-your-own-cheatsheet-codecademy/index.html
@@ -23,6 +23,7 @@
         <a href="#css_colors">CSS: Colors</a>
         <a href="#css_typography">CSS: Typography</a>
         <a href="#css_links_buttons">CSS Links and Buttons</a>
+        <a href="#css_flexbox">CSS: Layout with Flexbox</a>
     </div>
     <h1>HTML</h1>
         <p>The follow is a list of the <strong>HTML</strong> elements listed on the Codecademy cheatsheets.</p>
